--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
             <div class="logo">
                 <img src="./assets/logo.png" alt="Logo">
             </div>
-            <div>
-                <p class="title">iPhone 15 pro</p>
-            </div>
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
                 <li><a href="/about.html">About</a></li>
@@ -26,6 +23,85 @@
             </ul>
         </div>
     </nav>
+
+    <header class="header">
+        <h1>iPhone</h1>
+        <p>The future of smartphones</p>
+    </header>
+    <section class="main-content">
+        <div class="iphone-image">
+            <img src="./assets/hero1.jpg" alt="iPhone 15 Front View">
+        </div>
+        <div class="iphone-title">
+            <img src="./assets/hero-logo.png" alt="iPhone 15 Front View">
+            <button class="btn">
+                <a href="/product.html" style="text-decoration: none; color: white;">Buy</a>
+            </button>
+        </div>
+    </section>
+    <section class="uppersection">
+        <div class="details">
+            <div style="border-top-left-radius: 10px;">OS </div>
+            <div>iOS</div>
+            <div>RAM </div>
+            <div>8 GB</div>
+            <div>Product Dimensions </div>
+            <div>0.82 x 7.06 x 14.66 cm; 187 Grams</div>
+            <div>Batteries </div>
+            <div>1 Lithium Ion batteries required. (included)</div>
+            <div>Item model number </div>
+            <div>MTV43HN/A</div>
+            <div>Wireless communication technologies </div>
+            <div>Bluetooth, Wi-Fi</div>
+            <div>Connectivity technologies Wi‑Fi </div>
+            <div>6E (802.11ax) with 2x2 MIMO;Bluetooth 5.3</div>
+            <div>Special features </div>
+            <div>Camera</div>
+            <div>Other display features </div>
+            <div>Premium Consumer Electronics Brands</div>
+            <div>Device interface - primary</div>
+            <div> Buttons</div>
+            <div>Form factor </div>
+            <div>Bar</div>
+            <div>Colour White </div>
+            <div>Titanium</div>
+            <div>Battery Power Rating </div>
+            <div>0.02 Kilovolts</div>
+            <div>Whats in the box </div>
+            <div>iPhone 15 Pro 1N, USB-C Charge Cable</div>
+            <div>Manufacturer </div>
+            <div>Apple</div>
+            <div>Country of Origin </div>
+            <div>China</div>
+            <div style="border-bottom-left-radius: 10px;">Item Weight </div>
+            <div>187 g</div>
+        </div>
+        <div class="all-colors">
+            <img src="./assets/all_colors__eppfcocn9mky_large.jpg" alt="all-colors" srcset="">
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="company-info">
+                <h3>
+                    <img src="./assets/logo.png" alt="logo">
+                    Apple Inc.
+                </h3>
+                <p>
+                    Welcome to Apple Inc., where innovation meets excellence. We are dedicated to providing
+                    cutting-edge technology solutions and exceptional products that redefine the future.
+                </p>
+            </div>
+            <div class="contact-info">
+                <h3>Contact Information</h3>
+                <p>Email: bangalore_admin@apple.com</p>
+                <p>Phone: +91 80 4045 5150</p>
+                <p>Address: 123 Main Street, Cityville</p>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
