--- a/product.html
+++ b/product.html
@@ -15,9 +15,6 @@
             <div class="logo">
                 <img src="./assets/logo.png" alt="Logo">
             </div>
-            <div>
-                <p class="title">iPhone 15 pro</p>
-            </div>
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
                 <li><a href="/about.html">About</a></li>
@@ -33,7 +30,7 @@
 
         <section class="content">
             <div>
-                <p class="title">Apple iPhone 15 Pro</p>
+                <p class="product-title">Apple iPhone 15 Pro</p>
                 <p class="price">₹1,40,900</p>
                 <div>
                     <p class="description">Description</p>
@@ -64,6 +61,26 @@
             <img src="./assets/11.png" alt="product">
         </div>
     </article>
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="company-info">
+                <h3>
+                    <img src="./assets/logo.png" alt="logo">
+                    Apple Inc.
+                </h3>
+                <p>
+                    Welcome to Apple Inc., where innovation meets excellence. We are dedicated to providing
+                    cutting-edge technology solutions and exceptional products that redefine the future.
+                </p>
+            </div>
+            <div class="contact-info">
+                <h3>Contact Information</h3>
+                <p>Email: bangalore_admin@apple.com</p>
+                <p>Phone: +91 80 4045 5150</p>
+                <p>Address: 123 Main Street, Cityville</p>
+            </div>
+        </div>
+    </footer>
     <script src="./script.js"></script>
 </body>
 
