added about page

--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./styles/about.css">
     <title>About US</title>
 </head>
+
 <body>
     <nav>
         <div class="navbar">
@@ -22,12 +24,37 @@
         </div>
     </nav>
     <header class="header">
-        <h1>About</h1>
+        <h1 class="font-header">Apple Inc.</h1>
         <p>iPhone 15</p>
     </header>
 
     <article class="main">
-        <video class="ac-video-media-controller" crossorigin="anonymous" preload="auto" x-webkit-airplay="" aria-hidden="true" src="blob:https://www.apple.com/c7d3fdba-1370-47d3-9e9b-6a0981e44f9d"></video>
+        <iframe class="iphone-video" width="560" height="315"
+            src="https://www.youtube.com/embed/XHTrLYShBRQ?si=aS9oHp6WMieYBsm7" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        <div class="forged mini">
+            <div class="content">
+                <p class="font-header">FORGED IN TITANIUM</p>
+                <p>iPhone 15 Pro Max has a strong and light aerospace-grade titanium design with a textured matte-glass back. It also features a Ceramic Shield front that’s tougher than any smartphone glass. And it’s splash, water, and dust resistant.</p>
+            </div>
+            <img src="./assets/all_colors__eppfcocn9mky_large.jpg" alt="image" class="image">
+        </div>
+        <div class="display mini">
+            <div class="content">
+                <p class="font-header">ADVANCED DISPLAY</p>
+                <p>The 6.7” Super Retina XDR display with ProMotion ramps up refresh rates to 120Hz when you need exceptional graphics performance. Dynamic Island bubbles up alerts and Live Notifications. Plus, with Always-On display, your Lock Screen stays glanceable, so you don’t have to tap it to stay in the know.</p>
+            </div>
+            <img src="./assets/highlights_display.jpg" alt="image" class="image">
+        </div>
+        <div class="chip mini">
+            <div class="content">
+                <p class="font-header">GAME-CHANGING A17 PRO CHIP</p>
+                <p>A Pro-class GPU makes mobile games feel so immersive, with rich environments and realistic characters. A17 Pro is also incredibly efficient and helps to deliver amazing all-day battery life.</p>
+            </div>
+            <img src="./assets/highlights_chip_endframe__3159yn2mzkyi_large.jpg" alt="image" class="image">
+        </div>
     </article>
 
     <footer class="footer">
@@ -51,4 +78,5 @@
         </div>
     </footer>
 </body>
+
 </html>
