--- a/product.html
+++ b/product.html
@@ -30,9 +30,9 @@
 
         <section class="content">
             <div>
-                <p class="product-title">Apple iPhone 15 Pro</p>
+                <p class="product-title font-header">Apple iPhone 15 Pro</p>
                 <p class="price">₹1,40,900</p>
-                <div>
+                <div style="margin-top: 65px;" class="info-block">
                     <p class="description">Description</p>
                     <div class="grid">
                         <div class="t-col">Brand</div>
