--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
 
     <header class="header">
-        <h1>iPhone</h1>
+        <h1 class="font-header">iPhone</h1>
         <p>The future of smartphones</p>
     </header>
     <section class="main-content">
