added contact page

--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!-- NAVIGATION AND LOGO -->
     <nav>
         <div class="navbar">
             <div class="logo">
@@ -28,6 +29,7 @@
         <p>iPhone 15</p>
     </header>
 
+    <!-- MAIN PAGE CONTENT -->
     <article class="main">
         <iframe class="iphone-video" width="560" height="315"
             src="https://www.youtube.com/embed/XHTrLYShBRQ?si=aS9oHp6WMieYBsm7" title="YouTube video player"
@@ -57,6 +59,7 @@
         </div>
     </article>
 
+    <!-- FOOTER SECTION -->
     <footer class="footer">
         <div class="footer-content">
             <div class="company-info">
