--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hompage</title>
+    <title>Selling out</title>
     <link rel="stylesheet" href="./styles/home.css">
     <link rel="stylesheet" href="./styles/common.css">
 </head>
 
 <body>
+    <!-- NAVIGATION AND LOGO -->
     <nav>
         <div class="navbar">
             <div class="logo">
@@ -28,59 +29,65 @@
         <h1 class="font-header">iPhone</h1>
         <p>The future of smartphones</p>
     </header>
-    <section class="main-content">
-        <div class="iphone-image">
-            <img src="./assets/hero1.jpg" alt="iPhone 15 Front View">
-        </div>
-        <div class="iphone-title">
-            <img src="./assets/hero-logo.png" alt="iPhone 15 Front View">
-            <button class="btn">
-                <a href="/product.html" style="text-decoration: none; color: white;">Buy</a>
-            </button>
-        </div>
-    </section>
-    <section class="uppersection">
-        <div class="details">
-            <div style="border-top-left-radius: 10px;">OS </div>
-            <div>iOS</div>
-            <div>RAM </div>
-            <div>8 GB</div>
-            <div>Product Dimensions </div>
-            <div>0.82 x 7.06 x 14.66 cm; 187 Grams</div>
-            <div>Batteries </div>
-            <div>1 Lithium Ion batteries required. (included)</div>
-            <div>Item model number </div>
-            <div>MTV43HN/A</div>
-            <div>Wireless communication technologies </div>
-            <div>Bluetooth, Wi-Fi</div>
-            <div>Connectivity technologies Wi‑Fi </div>
-            <div>6E (802.11ax) with 2x2 MIMO;Bluetooth 5.3</div>
-            <div>Special features </div>
-            <div>Camera</div>
-            <div>Other display features </div>
-            <div>Premium Consumer Electronics Brands</div>
-            <div>Device interface - primary</div>
-            <div> Buttons</div>
-            <div>Form factor </div>
-            <div>Bar</div>
-            <div>Colour White </div>
-            <div>Titanium</div>
-            <div>Battery Power Rating </div>
-            <div>0.02 Kilovolts</div>
-            <div>Whats in the box </div>
-            <div>iPhone 15 Pro 1N, USB-C Charge Cable</div>
-            <div>Manufacturer </div>
-            <div>Apple</div>
-            <div>Country of Origin </div>
-            <div>China</div>
-            <div style="border-bottom-left-radius: 10px;">Item Weight </div>
-            <div>187 g</div>
-        </div>
-        <div class="all-colors">
-            <img src="./assets/all_colors__eppfcocn9mky_large.jpg" alt="all-colors" srcset="">
-        </div>
-    </section>
 
+    <!-- MAIN CONTENT -->
+    <main>
+        <section class="main-content">
+            <div class="iphone-image">
+                <img src="./assets/hero1.jpg" alt="iPhone 15 Front View">
+            </div>
+            <div class="iphone-title">
+                <img src="./assets/hero-logo.png" alt="iPhone 15 Front View">
+                <button class="btn">
+                    <a href="/product.html" style="text-decoration: none; color: white;">Buy</a>
+                </button>
+            </div>
+        </section>
+        <section class="uppersection">
+            <div class="details">
+                <div style="border-top-left-radius: 10px;">OS </div>
+                <div>iOS</div>
+                <div>RAM </div>
+                <div>8 GB</div>
+                <div>Product Dimensions </div>
+                <div>0.82 x 7.06 x 14.66 cm; 187 Grams</div>
+                <div>Batteries </div>
+                <div>1 Lithium Ion batteries required. (included)</div>
+                <div>Item model number </div>
+                <div>MTV43HN/A</div>
+                <div>Wireless communication technologies </div>
+                <div>Bluetooth, Wi-Fi</div>
+                <div>Connectivity technologies Wi‑Fi </div>
+                <div>6E (802.11ax) with 2x2 MIMO;Bluetooth 5.3</div>
+                <div>Special features </div>
+                <div>Camera</div>
+                <div>Other display features </div>
+                <div>Premium Consumer Electronics Brands</div>
+                <div>Device interface - primary</div>
+                <div> Buttons</div>
+                <div>Form factor </div>
+                <div>Bar</div>
+                <div>Colour White </div>
+                <div>Titanium</div>
+                <div>Battery Power Rating </div>
+                <div>0.02 Kilovolts</div>
+                <div>Whats in the box </div>
+                <div>iPhone 15 Pro 1N, USB-C Charge Cable</div>
+                <div>Manufacturer </div>
+                <div>Apple</div>
+                <div>Country of Origin </div>
+                <div>China</div>
+                <div style="border-bottom-left-radius: 10px;">Item Weight </div>
+                <div>187 g</div>
+            </div>
+            <div class="all-colors">
+                <img src="./assets/all_colors__eppfcocn9mky_large.jpg" alt="all-colors" srcset="">
+            </div>
+        </section>
+    </main>
+
+
+    <!-- FOOTER SECTION -->
     <footer class="footer">
         <div class="footer-content">
             <div class="company-info">
