--- a/product.html
+++ b/product.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/product.css">
     <link rel="stylesheet" href="./styles/common.css">
-    <title>Selling Out</title>
+    <title>iPhone 15</title>
 </head>
 
 <body>
+    <!-- NAVIGATION AND LOGO -->
     <nav>
         <div class="navbar">
             <div class="logo">
@@ -23,6 +24,8 @@
             </ul>
         </div>
     </nav>
+
+    <!-- MAIN CONTENT -->
     <article class="main">
         <div id="leftiphone" class="img1">
             <img src="./assets/1.png" alt="product">
@@ -61,6 +64,8 @@
             <img src="./assets/11.png" alt="product">
         </div>
     </article>
+
+    <!-- FOOTER SECTION -->
     <footer class="footer">
         <div class="footer-content">
             <div class="company-info">
